--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.13.3",
     "express-sequelize-session": "0.4.0",
     "express-session": "^1.11.3",
+    "grunt-cli": "^1.2.0",
     "lodash": "^4.6.1",
     "lusca": "^1.3.0",
     "method-override": "^2.3.5",
