--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-sequelize-session": "0.4.0",
     "express-session": "^1.11.3",
     "grunt-cli": "^1.2.0",
+    "jsonwebtoken": "^7.1.7",
     "lodash": "^4.6.1",
     "lusca": "^1.3.0",
     "method-override": "^2.3.5",
