--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "cosmil",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.5.0",
+    "angular": "1.5.3",
     "json3": "~3.3.1",
     "es5-shim": "~3.0.1",
     "bootstrap": "~3.1.1",
